on mobile layout sidebar + other fixes

--- a/src/components/PrimarySidebar.module.css
+++ b/src/components/PrimarySidebar.module.css
@@ -96,6 +96,7 @@ color:#e2e4e9;
 
 @media screen and (max-width: 520px) {
     .sidebar {
-        width: calc(calc(0.25 * 1rem) * 60);
+        /* width: calc(calc(0.25 * 1rem) * 60); */
+        width: calc(calc(0.25 * 1rem) * 18);
     }
 }
