--- a/src/pages/Overlays/Overlays.module.css
+++ b/src/pages/Overlays/Overlays.module.css
@@ -158,3 +158,12 @@
         margin-left: calc(calc(0.25 * 1rem) * 60);
     }
 }
+
+@media screen and (max-width: 520px) {
+    .secondarySidebar {
+        display: none;
+    }
+    .mainWrapper {
+        margin-right: 0px;
+    }
+}
